--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html> <!-- Declaro que este documento es HTML5 -->
-<html lang="es"> <!-- Establezco que el idioma del documento es español -->
+<!DOCTYPE html> 
+<html lang="es"> 
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
