--- a/index.html
+++ b/index.html
@@ -47,6 +47,5 @@
 </body>
 
 <!-- Incluyo los archivos js necesarios para generar la oferta (los cargo aca abajo, para no tener problemas con el dom)-->
-<script defer src="js/productos.js"></script> 
-<script defer src="js/oferta.js"></script> 
+<script src="js/productos.js"></script> 
 </html>
