--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel urna nec leo interdum luctus. Cras ac lorem ac lacus vestibulum congue a at nisl. Ut sollicitudin velit ut tortor varius, nec facilisis urna facilisis. Fusce sed libero libero. Integer ut ligula in nunc volutpat ultricies a et nisi.</p> <!-- Texto con información general sobre el supermercado -->
             </section>
             <!-- Aca se va a inyectar una oferta aleatoria -->
-            <div class="oferta">
+            <div class="oferta" id="oferta">  
             </div>
 
         </div>
@@ -46,6 +46,6 @@
     </footer>
 </body>
 
-<!-- Incluyo los archivos js necesarios para generar la oferta (los cargo aca abajo, para no tener problemas con el dom)-->
+<!-- Incluyo el archivo js necesario para generar la oferta (lo cargo aca abajo, para no tener problemas con el dom)-->
 <script src="js/productos.js"></script> 
 </html>
